# aiclient-llm

./: .env.template  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  pyproject.toml
aiclient/: __init__.py  agent.py  batch.py  client.py  data_types.py  exceptions.py  middleware.py  observability.py  testing.py  types.py  utils.py
aiclient/agents/: simple.py
aiclient/cache/: semantic.py
aiclient/mcp/: manager.py
aiclient/memory/: __init__.py  base.py  simple.py
aiclient/models/: chat.py
aiclient/providers/: anthropic.py  base.py  google.py  ollama.py  openai.py
aiclient/resilience/: __init__.py  retries.py
aiclient/tools/: __init__.py  base.py  policy.py
aiclient/transport/: base.py  http.py
docs/: README.md  agents.md  embeddings.md  errors.md  features.md  memory.md  middleware.md  observability.md  resilience.md  testing.md
examples/: demo_streaming.py  demo_vision.py  testing_your_app.py  verify_middleware_tools.py  verify_rate_limiter.py
examples/cookbook/: agent_web_search.py  batch_processing.py  chatbot_with_memory.py  (+2 more)
tests/: test_agent.py  test_agent_mcp.py  test_batch.py  test_caching.py  test_client.py  test_concurrency_reproduction.py  test_errors.py  test_integration.py  test_integration_e2e.py  test_memory.py  test_middleware.py  test_middleware_integration.py  test_middleware_tools.py  test_observability.py  test_rate_limiter.py  test_resilience_advanced.py  test_retries.py  test_retry_middleware.py  test_semantic_cache.py  test_structured.py  test_testing_utils.py  test_timeouts.py  test_usage_parsing.py  test_vision.py
