[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiclient"
version = "0.1.0"
description = "A minimal, production-minded Python SDK for interacting with AI models."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Antigravity", email = "antigravity@example.com" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Development Status :: 3 - Alpha",
]
dependencies = [
  "httpx>=0.25.0",
  "pydantic>=2.0",
  "python-dotenv",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["aiclient"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
strict = true
ignore_missing_imports = true
